# product-advisor

./: .gitignore  Dockerfile  amway_intelligence_recommender.csv  package-lock.json  pyproject.toml  render.yaml
.agents/skills/deployment-docker-render/: SKILL.md
.agents/skills/fastapi-backend/: SKILL.md
.agents/skills/nextjs-frontend/: SKILL.md
.agents/skills/playwright-testing/: SKILL.md
.agents/skills/product-advisor-overview/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: playwright.yml
backend/: llm.py  main.py  models.py  search.py
frontend/: package-lock.json  package.json  playwright.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Advisor.tsx  ProductCard.tsx
frontend/tests/: theme.spec.ts
